--- a/ALaMaronaDesktop/App.config
+++ b/ALaMaronaDesktop/App.config
@@ -22,6 +22,7 @@
       </property>
       <property name="connection.connection_string_name">db</property>
       <property name="adonet.batch_size">100</property>
+      <property name="current_session_context_class">thread</property>
       <mapping assembly="ALaMaronaDAL"/>
     </session-factory>
   </hibernate-configuration>
