--- a/ALaMarona.Service/ALaMarona.Service.csproj
+++ b/ALaMarona.Service/ALaMarona.Service.csproj
@@ -60,6 +60,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\Cookbook\Eg.Core\Eg.Core\Eg.Core.csproj">
+      <Project>{188E300B-50BD-4611-ACFB-EF38F1538D48}</Project>
+      <Name>Eg.Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ALaMarona.Domain\ALaMarona.Domain.csproj">
       <Project>{8F5FFDC1-824C-4CC2-A2D0-9EF79A22642A}</Project>
       <Name>ALaMarona.Domain</Name>
