--- a/ALaMaronaDAL/ALaMaronaDAL.csproj
+++ b/ALaMaronaDAL/ALaMaronaDAL.csproj
@@ -36,15 +36,6 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Eg.Core">
-      <HintPath>..\..\..\..\Cookbook\Eg.Core\Eg.Core.Data.Impl\bin\Debug\Eg.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Eg.Core.Data">
-      <HintPath>..\..\..\..\Cookbook\Eg.Core\Eg.Core.Data.Impl\bin\Debug\Eg.Core.Data.dll</HintPath>
-    </Reference>
-    <Reference Include="Eg.Core.Data.Impl">
-      <HintPath>..\..\..\..\Cookbook\Eg.Core\Eg.Core.Data.Impl\bin\Debug\Eg.Core.Data.Impl.dll</HintPath>
-    </Reference>
     <Reference Include="NHibernate">
       <HintPath>Lib\Required_Bins\NHibernate.dll</HintPath>
     </Reference>
@@ -63,9 +54,23 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <Content Include="Mappings\Producto.hbm.xml" />
+    <EmbeddedResource Include="Mappings\Producto.hbm.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\Cookbook\Eg.Core\Eg.Core.Data.Impl\Eg.Core.Data.Impl.csproj">
+      <Project>{2bfd84f2-919a-4b0e-a707-9f7a2504f58f}</Project>
+      <Name>Eg.Core.Data.Impl</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\Cookbook\Eg.Core\Eg.Core.Data\Eg.Core.Data.csproj">
+      <Project>{75a2689e-5ce3-44da-a252-b5aff6b28f47}</Project>
+      <Name>Eg.Core.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\Cookbook\Eg.Core\Eg.Core\Eg.Core.csproj">
+      <Project>{188E300B-50BD-4611-ACFB-EF38F1538D48}</Project>
+      <Name>Eg.Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ALaMarona.Domain\ALaMarona.Domain.csproj">
       <Project>{8F5FFDC1-824C-4CC2-A2D0-9EF79A22642A}</Project>
       <Name>ALaMarona.Domain</Name>
