--- a/ALaMaronaWebApi/ALaMarona.Core/ALaMarona.Core.csproj
+++ b/ALaMaronaWebApi/ALaMarona.Core/ALaMarona.Core.csproj
@@ -4,18 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{235C2788-7E55-41D4-B205-A78DB4911818}</ProjectGuid>
+    <ProjectGuid>{CE0BC458-3378-4DE8-B3B6-95EA52B863FF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ALaMaronaDAL</RootNamespace>
-    <AssemblyName>ALaMaronaDAL</AssemblyName>
+    <RootNamespace>ALaMarona.Core</RootNamespace>
+    <AssemblyName>ALaMarona.Core</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -25,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -33,15 +29,33 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=5.2.0.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.5.2.0\lib\net45\AutoMapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="NHibernate">
-      <HintPath>Lib\Required_Bins\NHibernate.dll</HintPath>
+      <HintPath>..\..\..\..\..\Cookbook\Eg.Core\Lib\Required_Bins\NHibernate.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Web" />
+    <Reference Include="System.Web.Http, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.2.3\lib\net45\System.Web.Http.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Web.Http.WebHost, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.WebHost.5.2.3\lib\net45\System.Web.Http.WebHost.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -50,29 +64,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ProductoRepository.cs" />
+    <Compile Include="Controller\GenericController.cs" />
+    <Compile Include="Factory.cs" />
+    <Compile Include="IFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\GenericService.cs" />
+    <Compile Include="Services\IGenericService.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-    <EmbeddedResource Include="Mappings\Producto.hbm.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </EmbeddedResource>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\Cookbook\Eg.Core\Eg.Core.Data.Impl\Eg.Core.Data.Impl.csproj">
-      <Project>{2bfd84f2-919a-4b0e-a707-9f7a2504f58f}</Project>
+    <ProjectReference Include="..\..\..\..\..\Cookbook\Eg.Core\Eg.Core.Data.Impl\Eg.Core.Data.Impl.csproj">
+      <Project>{2BFD84F2-919A-4B0E-A707-9F7A2504F58F}</Project>
       <Name>Eg.Core.Data.Impl</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\..\Cookbook\Eg.Core\Eg.Core.Data\Eg.Core.Data.csproj">
-      <Project>{75a2689e-5ce3-44da-a252-b5aff6b28f47}</Project>
+    <ProjectReference Include="..\..\..\..\..\Cookbook\Eg.Core\Eg.Core.Data\Eg.Core.Data.csproj">
+      <Project>{75A2689E-5CE3-44DA-A252-B5AFF6B28F47}</Project>
       <Name>Eg.Core.Data</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\..\Cookbook\Eg.Core\Eg.Core\Eg.Core.csproj">
+    <ProjectReference Include="..\..\..\..\..\Cookbook\Eg.Core\Eg.Core\Eg.Core.csproj">
       <Project>{188E300B-50BD-4611-ACFB-EF38F1538D48}</Project>
       <Name>Eg.Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\ALaMarona.Domain\ALaMarona.Domain.csproj">
+    <ProjectReference Include="..\..\ALaMarona.Domain\ALaMarona.Domain.csproj">
       <Project>{8F5FFDC1-824C-4CC2-A2D0-9EF79A22642A}</Project>
       <Name>ALaMarona.Domain</Name>
     </ProjectReference>
