--- a/ALaMaronaWebApi/ALaMaronaWebApi/Web.config
+++ b/ALaMaronaWebApi/ALaMaronaWebApi/Web.config
@@ -39,6 +39,14 @@
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="NHibernate" publicKeyToken="aa95f207798dfdb4" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.0.4000" newVersion="4.1.0.4000" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Castle.Core" publicKeyToken="407dd0808d44fbdc" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.codedom>
@@ -49,9 +57,6 @@
   </system.codedom>
   <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
     <session-factory>
-      <property name="proxyfactory.factory_class">
-        NHibernate.ByteCode.Castle.ProxyFactoryFactory, NHibernate.ByteCode.Castle
-      </property>
       <property name="dialect">
         NHibernate.Dialect.MsSql2008Dialect, NHibernate
       </property>
