--- a/ALaMaronaWebApi/ALaMaronaWebApi/packages.config
+++ b/ALaMaronaWebApi/ALaMaronaWebApi/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="5.2.0" targetFramework="net461" />
+  <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client.es" version="5.2.3" targetFramework="net461" />
@@ -11,4 +12,5 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net461" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
+  <package id="NHibernate" version="4.1.1.4000" targetFramework="net461" />
 </packages>
