Se agregan las tablas, entidades, DTOs y el controller correspondiente a las Direcciones

--- a/ALaMarona.Domain/ALaMarona.Domain.csproj
+++ b/ALaMarona.Domain/ALaMarona.Domain.csproj
@@ -56,7 +56,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DTOs\ColorDTO.cs" />
+    <Compile Include="DTOs\DireccionDTO.cs" />
+    <Compile Include="DTOs\LocalidadDTO.cs" />
+    <Compile Include="DTOs\PaisDTO.cs" />
     <Compile Include="DTOs\ProductoDTO.cs" />
+    <Compile Include="DTOs\ProvinciaDTO.cs" />
     <Compile Include="Entities\Color.cs" />
     <Compile Include="Entities\Localidad.cs" />
     <Compile Include="Entities\Provincia.cs" />
