Se agregan las clases, tablas y el controller necesarios para el servicio de Persona

--- a/ALaMaronaWebApi/ALaMarona.Core/ALaMarona.Core.csproj
+++ b/ALaMaronaWebApi/ALaMarona.Core/ALaMarona.Core.csproj
@@ -69,6 +69,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ALaMaronaException.cs" />
     <Compile Include="Controller\GenericController.cs" />
     <Compile Include="Factory.cs" />
     <Compile Include="IFactory.cs" />
