--- a/ALaMarona.Domain/ALaMarona.Domain.csproj
+++ b/ALaMarona.Domain/ALaMarona.Domain.csproj
@@ -58,11 +58,15 @@
     <Compile Include="DTOs\ColorDTO.cs" />
     <Compile Include="DTOs\DireccionDTO.cs" />
     <Compile Include="DTOs\LocalidadDTO.cs" />
+    <Compile Include="DTOs\PersonaDTO.cs" />
     <Compile Include="DTOs\PaisDTO.cs" />
     <Compile Include="DTOs\ProductoDTO.cs" />
     <Compile Include="DTOs\ProvinciaDTO.cs" />
     <Compile Include="Entities\Color.cs" />
+    <Compile Include="Entities\Nombre.cs" />
+    <Compile Include="Entities\EstadoCivil.cs" />
     <Compile Include="Entities\Localidad.cs" />
+    <Compile Include="Entities\Documento.cs" />
     <Compile Include="Entities\Provincia.cs" />
     <Compile Include="Entities\Pais.cs" />
     <Compile Include="Entities\Persona.cs" />
