--- a/ALaMaronaWebApi/ALaMaronaWebApi/ALaMaronaWebApi.csproj
+++ b/ALaMaronaWebApi/ALaMaronaWebApi/ALaMaronaWebApi.csproj
@@ -104,6 +104,7 @@
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\DireccionController.cs" />
+    <Compile Include="Controllers\PersonaController.cs" />
     <Compile Include="Controllers\ProductoController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
