--- a/ALaMarona.Domain/ALaMarona.Domain.csproj
+++ b/ALaMarona.Domain/ALaMarona.Domain.csproj
@@ -57,12 +57,14 @@
   <ItemGroup>
     <Compile Include="DTOs\ColorDTO.cs" />
     <Compile Include="DTOs\DireccionDTO.cs" />
+    <Compile Include="DTOs\ImagenDTO .cs" />
     <Compile Include="DTOs\LocalidadDTO.cs" />
     <Compile Include="DTOs\PersonaDTO.cs" />
     <Compile Include="DTOs\PaisDTO.cs" />
     <Compile Include="DTOs\ProductoDTO.cs" />
     <Compile Include="DTOs\ProvinciaDTO.cs" />
     <Compile Include="Entities\Color.cs" />
+    <Compile Include="Entities\Imagen.cs" />
     <Compile Include="Entities\Nombre.cs" />
     <Compile Include="Entities\EstadoCivil.cs" />
     <Compile Include="Entities\Localidad.cs" />
