Se agrego el mapeo y el controller para el manejo de stock

--- a/ALaMarona.Domain/ALaMarona.Domain.csproj
+++ b/ALaMarona.Domain/ALaMarona.Domain.csproj
@@ -59,6 +59,8 @@
     <Compile Include="DTOs\DireccionDTO.cs" />
     <Compile Include="DTOs\ImagenDTO .cs" />
     <Compile Include="DTOs\LocalidadDTO.cs" />
+    <Compile Include="DTOs\MovimientoStockDTO.cs" />
+    <Compile Include="DTOs\StockDTO.cs" />
     <Compile Include="DTOs\PersonaDTO.cs" />
     <Compile Include="DTOs\PaisDTO.cs" />
     <Compile Include="DTOs\ProductoDTO.cs" />
@@ -69,6 +71,8 @@
     <Compile Include="Entities\EstadoCivil.cs" />
     <Compile Include="Entities\Localidad.cs" />
     <Compile Include="Entities\Documento.cs" />
+    <Compile Include="Entities\MovimientoStock.cs" />
+    <Compile Include="Entities\Stock.cs" />
     <Compile Include="Entities\Provincia.cs" />
     <Compile Include="Entities\Pais.cs" />
     <Compile Include="Entities\Persona.cs" />
