--- a/ALaMaronaWebApi/ALaMaronaWebApi/ALaMaronaWebApi.csproj
+++ b/ALaMaronaWebApi/ALaMaronaWebApi/ALaMaronaWebApi.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Controllers\DireccionController.cs" />
     <Compile Include="Controllers\PersonaController.cs" />
     <Compile Include="Controllers\ProductoController.cs" />
+    <Compile Include="Controllers\StockController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -122,7 +123,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\..\Cookbook\Eg.Core\Eg.Core\Eg.Core.csproj">
@@ -132,10 +132,6 @@
     <ProjectReference Include="..\..\ALaMarona.Domain\ALaMarona.Domain.csproj">
       <Project>{8f5ffdc1-824c-4cc2-a2d0-9ef79a22642a}</Project>
       <Name>ALaMarona.Domain</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\ALaMarona.Service\ALaMarona.Service.csproj">
-      <Project>{2e07d654-6c34-4b8b-99e8-943b48948d0e}</Project>
-      <Name>ALaMarona.Service</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\ALaMaronaDAL\ALaMaronaDAL.csproj">
       <Project>{235c2788-7e55-41d4-b205-a78db4911818}</Project>
